Select - imena patika

--- a/index.html
+++ b/index.html
@@ -126,24 +126,24 @@
                 <option>Adidas SUPERNOVA</option>
                 <option>Adidas VS HOOPS</option>
                 <option>Adidas X GHOSTED</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
-                <option>Lorem ipsum</option>
+                <option>Nike AIR MAX ADVANTAGE</option>
+                <option>Nike COURT</option>
+                <option>Nike EBERNON</option>
+                <option>Nike FLEX CONTROL</option>
+                <option>Nike LEGEND 8</option>
+                <option>Nike PHANTOM</option>
+                <option>Nike REVOLUTION</option>
+                <option>Nike T_LITE</option>
+                <option>Nike VAPOR 13</option>
+                <option>Reebok CROSSFIT</option>
+                <option>Reebok ENERGYLUX</option>
+                <option>Reebok FLEXAGON FORCE</option>
+                <option>Reebok FLEXAGON</option>
+                <option>Reebok LITE</option>
+                <option>Reebok QUICK MOTION</option>
+                <option>Reebok REAGO</option>
+                <option>Reebok ROYAL CLN2</option>
+                <option>Reebok ROYAL</option>
               </select>
               <input
                 type="number"
